frontend deployment fix

--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,9 +1,10 @@
 {
     "version": 2,
     "builds": [
-      { "src": "./", "use": "@vercel/static-build" }
+      { "src": "dist/**", "use": "@vercel/static-build" }
     ],
     "routes": [
       { "src": "/(.*)", "dest": "/index.html" }
     ]
   }
+  
