--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,10 +1,9 @@
 {
     "version": 2,
     "builds": [
-      { "src": "dist/**", "use": "@vercel/static-build" }
+      { "src": "package.json", "use": "@vercel/static-build", "config": { "distDir": "dist" } }
     ],
     "routes": [
       { "src": "/(.*)", "dest": "/index.html" }
     ]
-  }
-  
+  }  
