--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,9 +1,15 @@
 {
     "version": 2,
     "builds": [
-      { "src": "package.json", "use": "@vercel/static-build", "config": { "distDir": "dist" } }
+      {
+        "src": "package.json",
+        "use": "@vercel/static-build",
+        "config": { "distDir": "dist" }
+      }
     ],
     "routes": [
+      { "handle": "filesystem" },
       { "src": "/(.*)", "dest": "/index.html" }
     ]
-  }  
+  }
+  
